--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -6,5 +10,4 @@
 
 .contentWrapper {
   flex: 1;
-  padding-bottom: 200px;
 }
