--- a/src/theme/font.css
+++ b/src/theme/font.css
@@ -23,3 +23,10 @@
   font-style: normal;
   font-weight: 400;
 }
+
+@font-face {
+  font-family: 'Pretendard';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
