--- a/src/theme/font.css
+++ b/src/theme/font.css
@@ -26,7 +26,7 @@
 
 @font-face {
   font-family: 'Pretendard';
-  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  src: url('@assets/fonts/Pretendard-Regular.otf');
   font-weight: 400;
   font-style: normal;
 }
