chore: apply Pretendard

--- a/src/theme/font.css
+++ b/src/theme/font.css
@@ -30,3 +30,17 @@
   font-weight: 400;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('@assets/fonts/Pretendard-Regular.otf');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard-Bold';
+  src: url('@assets/fonts/Pretendard-Bold.otf');
+  font-weight: 700;
+  font-style: normal;
+}
